kube/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-site
spec:
  selector:
    app.kubernetes.io/name: hive-site
  ports:
    - name: http
      port: 80
      targetPort: http
